[metadata]
name = crawler
author = André Rodrigues
version = 0.1.0


[options]
packages = find:
requires = 
    selenium
    pandas
    lxml
    html5lib

include_package_data = True
scripts = crawler/app.py
install_requires = 
    selenium>=3.141
    pandas>=1.0
    lxml>=4.6
    html5lib>=1.1

requires-python = >=3.7
description-file = README.md

[options.extras_require]
dev = 
  black
  flake8
  ipython

test =
  pytest
  flake8
  pytest-cov

[options.package_data]
* = *.txt, *.rst, *.jsonl

[options.entry_points]
console_scripts = 
    crawler = crawler.app:crawler

